<?xml version="1.0"?>
<package format="3">
  <name>free_fleet_mqtt</name>
  <version>0.1.0</version>
  <description>Free fleet middleware implementation using Paho.Mqtt.Cpp</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_utils</depend>
  <depend>free_fleet</depend>
  <depend>PahoMqttCpp</depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>rmf_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
